# flvacc-bot

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: pi.cmake
src/: command.h  config.cpp  config.h  listeners.cpp  listeners.h  main.cpp
src/commands/: apply.cpp  apply.h  enroll.cpp  enroll.h  ping.cpp  ping.h
